--- a/submit.html
+++ b/submit.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article Submission</title>
+    <title>Submission Form</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="homepage-container">
-        <h1>your submission</h1>
+    <div class="homepage-container" style="margin-top: 100px">
         <form id="article-form">
             <div id="content-container">
             </div>
@@ -16,11 +15,13 @@
                 <option value="text">Text Block</option>
                 <option value="media">Media Asset</option>
             </select>
-			<button type="button" onclick="addContent()" class="button">(add)</button>
-            
-            
+			<button type="button" onclick="addContent()" class="button"> add</button>
             <br><br><br><br>
-            <button type="submit">Submit Article</button>
+            <button type="submit">Submit Article &#8982;</button>
+			<br><br>
+	        <button class="back-button" onclick="goBack()">
+				&#8592; Return Home
+			</button>
         </form>
     </div>
 
