adding code for siteground backend

--- a/submit.html
+++ b/submit.html
@@ -26,6 +26,14 @@
         </form>
     </div>
 
+    <!-- Modal for displaying submission message -->
+    <div id="submissionModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeModal">&times;</span>
+            <p id="modalMessage">Your message goes here!</p>
+        </div>
+    </div>
+
     <script src="submit.js" defer></script>
 </body>
 </html>
