--- a/index.html
+++ b/index.html
@@ -7,29 +7,41 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div class="homepage-container">
-	    <div class="sidebar">
-	        <div class="search-bar">
-	            <input type="text" placeholder="search...">
-	        </div>
-	        <div id="tags-container" class="tags">
-	            <!-- Tags will be dynamically added here -->
-	        </div>
-	    </div>
-	    <div class="articles-column">
-	        <h1 id="header">Day 0</h1>
-	        <div id="article-container">
-	            <p>Loading articles...</p>
-	        </div>
-	    </div>
-	    <div class="tally-column">
-	        <a href="submit.html" class="submit-button">Submit Your Article</a>
-			<br><br>
-	        <div id="tally-container">
-	            <!-- Tally marks will be dynamically added here -->
-	        </div>
-	    </div>
-	</div>
+    <div class="homepage-container">
+        <div class="sidebar">
+            <div class="search-bar">
+                <input type="text" placeholder="search">
+            </div>
+            <div id="tag-tree" class="tags">
+                <!-- Tags will be dynamically added here -->
+            </div>
+        </div>
+        <div class="articles-column">
+            <h1 id="header">Day 0</h1>
+            <div id="article-container">
+                <p>Loading articles...</p>
+            </div>
+        </div>
+        <div class="tally-column">
+            <button id="login-button" class="login-button">login</button> <!-- Change to Login button -->
+            <div id="tally-container">
+                <!-- Tally marks will be dynamically added here -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal for password entry -->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeModal">&times;</span>
+            <h2>Enter Password</h2>
+            <input type="password" id="password" placeholder="Password" required>
+            <button id="submit-password">Submit</button>
+            <p id="error-message" style="color: red;"></p>
+        </div>
+    </div>
+
     <script src="homepage.js"></script>
+    <script src="login.js" defer></script>
 </body>
 </html>
